FAQ Page - Final Draft - Corrected Overlap

--- a/src/Inductions/inductions.css
+++ b/src/Inductions/inductions.css
@@ -18,8 +18,9 @@
     font-size: 20px;
     text-align: left;
     padding-left: 10px;
-
-	transition: all 0.4s ease;
+    font-weight: bold;
+    transition: all 0.4s ease;
+    padding-right: 24px;
 }
 
 .faqs .faq .faq-question::after {
@@ -31,7 +32,7 @@
 	width: 30px;
 	height: 30px;
 
-	background-image: url('./arrow-down-mint.svg');
+	background-image: url('./Arrow.svg');
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
